k8s/echo-bar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo
          args: ["-text=bar"]
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: bar
spec:
  selector:
    app: bar
  ports:
    - port: 80
      targetPort: 5678
